--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
     <title>Hanshi Sun</title>
     <link rel="shortcut icon" href="assets/img/title.ico">
-
-    <link rel="stylesheet" href="jemdoc.css" type="text/css">
+    <link rel="stylesheet" href="red.css" type="text/css">
 </head>
 
 <body>
@@ -27,17 +25,16 @@
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
                             href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I was
-                        a research intern at UofA before, supervised by Prof. <a
+                        a research intern at the <a href=https://www.ualberta.ca/index.html target=_blank
+                        rel=noopener>University of Alberta</a> before, supervised by Prof. <a
                             href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am an intern at
-                        Apple Inc. now.
+                            <a href=https://www.apple.com>Apple Inc.</a> now.
                         <br><br>
-                        Research Interest: Computer Vision (object detection, classification and anomaly
-                        detection)<br>
+                        Research Interest: Machine Learning, Computer Vision<br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> preminstrel
-                        [at] gmail [dot] com
-                        (Research)<br>
-                        <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> sunhanshi1225 [at]
-                        outlook [dot] com (Academic)<br>
+                        [at] gmail [dot] com<br>
+                        <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> hanshi.sun [at]
+                        outlook [dot] com<br>
                     </p>
                     <p style="line-height: 1.8;">
                         <a href="https://github.com/preminstrel">
@@ -66,14 +63,13 @@
 
     <h2>News</h2>
     <ul>
-        <div style="height:98px;width:fit-content;overflow:auto;background:#FFFFFF;">
+        <div style="height:60px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p>[2022/10/25] I will go to <a href=https://www.apple.com>Apple Inc.</a> as an intern in EE/SW team.
+                <p>[2022/11/15] I am working at <a href=https://www.apple.com>Apple Inc.</a> as an intern in EE/SW team for ten months.
                 </p>
             </li>
             <li>
-                <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a
-                        href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
+                <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
                     University.
                 </p>
             </li>
@@ -98,7 +94,7 @@
                         <li>
                             <i>Bachelor of Engineering in Eletronic Science and Technology</i>
                         </li>
-                        <li>Overall GPA: <font color="red"> 3.98/4.0, 94.04/100 </font> | Ranking: 1/20</li>
+                        <li>Overall GPA: <font style="color: rgb(154, 9, 9);"> 3.98/4.0, 94.04/100 </font> | Ranking: 1/20</li>
                         <li>2021 & 2022 China National Scholarship</li>
                     </ul>
                 </td>
@@ -110,84 +106,12 @@
         </tbody>
     </table>
 
-    <!-- <table>
-        <tbody>
-            <tr>
-                <td width="800">
-                    <h4> University of Edinburgh, Edinburgh, UK (Jan 2023 - Jul 2023)</h4>
-                    <ul>
-                        <li>
-                            <i>(Expected) International Exchange Student, School of Informatics</i>
-                        </li>
-                    </ul>
-                </td>
-                <td align="right">
-                    <img src="assets/img/edinburgh.png" width="285px">
-                </td>
-            </tr>
-            <tr></tr>
-        </tbody>
-    </table> -->
-
     <h2>Research Experience</h2>
     <table>
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Oct 2022 - Present)</h4>
-                    <ul>
-                        <li>
-                            <i>Bachelor Thesis</i>
-                        </li>
-                        <li>Supervisor: Prof.
-                            <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou
-                            </a>
-                        </li>
-                        <li>Project: Multi-task Learning Based Fundus Multi-disease Diagnosis</li>
-                    </ul>
-                </td>
-                <td width="141px">
-                    <img id="school_logo" src="assets/img/seu_ee.jpeg" width="120px">
-                </td>
-                <td width="144px">
-                    <img src="assets/img/PALMLogo.png" width="125px">
-                </td>
-            </tr>
-            <tr></tr>
-        </tbody>
-    </table>
-    <table>
-        <tbody>
-            <tr>
-                <td width="800">
-                    <h4> University of Alberta, Edmonton, Canada (Jul 2022 - Present)</h4>
-                    <ul>
-                        <li>
-                            <i>Mitacs Globalink Research Internship</i>
-                        </li>
-                        <li>Supervisor: Prof. <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>
-                        </li>
-                        <li>Project: Weak/self Supervision for Anomaly Detection</li>
-                        <li>
-                            <a href="https://www.mitacs.ca/en/programs/globalink/globalink-graduate-fellowship">
-                                Globalink Graduate Fellowship
-                            </a>
-                        </li>
-                    </ul>
-                </td>
-                <td><br><br><br><br></td>
-                <td>
-                    <img src="assets/img/University_of_Alberta_logo.png" width="285px">
-                    <center><img src="assets/img/mitacs.jpeg" width="285px"></center>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <table>
-        <tbody>
-            <tr>
-                <td width="800">
-                    <h4> Southeast University, Nanjing, China (Oct 2021 - Jul 2022)</h4>
+                    <h4> Southeast University, Nanjing, China (Oct 2021 - Jul 2023)</h4>
                     <ul>
                         <li>
                             <i>Research Assitant in <a href="http://palm.seu.edu.cn/members.html">PALM Lab</a></i>
@@ -197,7 +121,8 @@
                             </a>
                         </li>
                         <li>Project 1: Disentangled Distribution Learning and Consistency Regularization</li>
-                        <li>Project 2: Multi-Modal Multi-task Transformer on Fundus Images</li>
+                        <li>Project 2: Multi-Modal Multi-task Transformer on Disease Detection</li>
+                        <li>Project 3: Multi-task Learning For Multi-disease Classification</li>
                     </ul>
                 </td>
                 <td width="141px">
@@ -208,6 +133,33 @@
                 </td>
             </tr>
             <tr></tr>
+        </tbody>
+    </table>
+    <table>
+        <tbody>
+            <tr>
+                <td width="800">
+                    <h4> University of Alberta, Edmonton, Canada (Jul 2022 - Oct 2022)</h4>
+                    <ul>
+                        <li>
+                            <i>Mitacs Globalink Research Internship</i>
+                        </li>
+                        <li>Supervisor: Prof. <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>
+                        </li>
+                        <li>Project: Weak/self Supervised Learning for Anomaly Detection</li>
+                        <li>
+                            <a href="https://www.mitacs.ca/en/programs/globalink/globalink-graduate-fellowship">
+                                Globalink Graduate Fellowship
+                            </a>
+                        </li>
+                    </ul>
+                </td>
+                <td><br><br><br><br></td>
+                <td>
+                    <img src="assets/img/University_of_Alberta_logo.png" width="285px">
+                    <!-- <center><img src="assets/img/mitacs.jpeg" width="245px"></center> -->
+                </td>
+            </tr>
         </tbody>
     </table>
     <table>
@@ -233,7 +185,7 @@
                     <img src="assets/img/asic_l.png" width="120px">
                 </td>
                 <td width="144px">
-                    <img src="assets/img/seu.jpg" width="125px">
+                    <img src="assets/img/seu_ee.jpeg" width="125px">
                 </td>
             </tr>
             <tr></tr>
@@ -249,7 +201,7 @@
                         <li>
                             <i>iPad System Intern</i>
                         </li>
-                        <li> Built a pure python automation test frame that can run on multiple units, collect and analyze logs</li>
+                        <li>Built a python automation test frame that can run on multiple units, collect and analyze logs</li>
                         <li>Issue reproduction, symptom capture, and hands-on debugging for coexistence testing</li>
                         <li>Created web pages with diverse visualization of the analyzed data using Flask</li>
                     </ul>
@@ -266,13 +218,13 @@
     <table>
         <tr>
             <td width="306">
-                <img src="assets/img/coming.png" width="285px" style="box-shadow: 4px 4px 8px #888">
+                <img src="assets/img/coming.png" width="285px" height="150px" style="box-shadow: 4px 4px 8px #888">
             </td>
             <td>
-                <b>Retina OCT Anomaly Detection and localization via Low-level Pyramid Reverse Distillation Network
+                <b>Retinal OCT Anomaly Detection and Localization by Anatomic Structure-Enhanced Augmentation
                 </b> <br>
                 <br>
-                Jinan Bao, <strong>Hanshi Sun</strong> and Xingyu Li <br>
+                <a href="https://github.com/DorisBao">Jinan Bao</a>, <strong>Hanshi Sun</strong> and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a> <br>
                 <em>Medical Imaging with Deep Learning</em>, (<i><b>MIDL</b></i>), 2023.
                 <i style="color:red">submitted</i>
                 <p></p>
@@ -288,7 +240,7 @@
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
     </table>
-    <table>
+    <!-- <table>
         <tr>
             <td width="306">
                 <img src="assets/img/Ret-T.png" width="285px" style="box-shadow: 4px 4px 8px #888">
@@ -298,38 +250,31 @@
                 </b> <br>
                 <br>
                 Peng Xie, Yixiao Yuan, <strong>Hanshi Sun</strong> and Yi Zhou <br>
-                <!-- <em>British Machine Vision Virtual Conference</em>, (<i><b>BMVC</b></i>), 2022. -->
                 <i style="color:red">In submission</i>
                 <p></p>
                 <p>
                     [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
                         page</a>]
-                    <!-- [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>] -->
-                    <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
                 </p>
             </td>
         </tr>
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
-    </table>
+    </table> -->
     <table>
         <tr>
             <td width="306">
-                <img src="assets/img/combat_label_noise.png" width="285px" style="box-shadow: 4px 4px 8px #888">
+                <img src="assets/img/combat_label_noise.png" width="285px" height="150px" style="box-shadow: 4px 4px 8px #888">
             </td>
             <td>
                 <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
-                </b> <br>
-                <br>
-                Yi Zhou, Lei Huang, Tao Zhou, <strong>Hanshi Sun</strong>
+                </b> <br> <br>
+                <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, <a href="https://huangleibuaa.github.io">Lei Huang</a>, <a href="https://taozh2017.github.io">Tao Zhou</a> and <strong>Hanshi Sun</strong><br>
                 <em>Future Generation Computer Systems</em>, (<i><b>FGCS</b></i>), 2022.
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
-                        page</a>]
-                    [<a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="_blank">paper</a>]
-                    <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
+                    [<a href="https://www.sciencedirect.com/science/article/pii/S0167739X22004228" target="blank">paper</a>]
                 </p>
             </td>
         </tr>
@@ -340,15 +285,15 @@
     <table>
         <tr>
             <td width="306">
-                <img src="assets/img/ecg.png" width="285px" height="230px" style="box-shadow: 4px 4px 8px #888">
+                <img src="assets/img/ecg.png" width="285px" height="150px" style="box-shadow: 4px 4px 8px #888">
             </td>
             <td>
                 <b>Arrhythmia Classifier Using Convolutional Neural Network with Adaptive Loss-aware Multi-bit Networks
                     Quantization
                 </b> <br>
                 <br>
-                <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, Hao Liu, Zhi Qi <br>
-                <em>International Conference on Artificial Intelligence and Computer Engineering</em><br>
+                <strong>Hanshi Sun</strong>, Ao Wang, Ninghao Pu, Zhiqing Li, Junguang Huang, <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a> and Zhi Qi <br>
+                <em>International Conference on Artificial Intelligence and Computer Engineering</em>,
                 (<i><b>ICAICE</b></i>), 2021.
                 <p></p>
                 <p>
@@ -366,7 +311,7 @@
     <h4>Videos:</h4>
     <iframe width="500" height="300" src="https://www.youtube.com/embed/JYPw38QwzDM"></iframe>   
     <p>
-    <details style="line-height: 0.4;">
+    <details>
         <summary>Friends (click to expand)</summary>
         <ul>
             <li>HKU: <a href=" http://yazhou-z.github.io">Yazhou Zhao</a></li>
