--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
     <h2>Selected Publications</h2>
     <table>
         <tr>
-            <td width="306">
-                <img src="assets/img/coming.png" width="285px" height="150px" style="box-shadow: 4px 4px 8px #888">
+            <td width="315">
+                <img src="assets/img/Retinal_OCT_AD.png" width="300px">
             </td>
             <td>
                 <b>Retinal OCT Anomaly Detection and Localization by Anatomic Structure-Enhanced Augmentation
@@ -264,8 +264,8 @@
     </table> -->
     <table>
         <tr>
-            <td width="306">
-                <img src="assets/img/combat_label_noise.png" width="285px" height="150px" style="box-shadow: 4px 4px 8px #888">
+            <td width="315">
+                <img src="assets/img/combat_label_noise.png" width="300px">
             </td>
             <td>
                 <b>Combating Medical Noisy Labels by Disentangled Distribution Learning and Consistency Regularization
@@ -284,8 +284,8 @@
     </table>
     <table>
         <tr>
-            <td width="306">
-                <img src="assets/img/ecg.png" width="285px" height="150px" style="box-shadow: 4px 4px 8px #888">
+            <td width="315">
+                <img src="assets/img/ecg.png" width="300px">
             </td>
             <td>
                 <b>Arrhythmia Classifier Using Convolutional Neural Network with Adaptive Loss-aware Multi-bit Networks
