--- a/index.html
+++ b/index.html
@@ -225,8 +225,7 @@
                 </b> <br>
                 <br>
                 <a href="https://github.com/DorisBao">Jinan Bao</a>, <strong>Hanshi Sun</strong> and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a> <br>
-                <em>Medical Imaging with Deep Learning</em>, (<i><b>MIDL</b></i>), 2023.
-                <i style="color:red">submitted</i>
+                <i style="color:red">In submission</i>
                 <p></p>
                 <p>
                     [<a href="https://preminstrel.github.io/" target="blank">project
