--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
     <iframe width="500" height="300" src="https://www.youtube.com/embed/JYPw38QwzDM"></iframe>   
     <p>
     <details>
-        <summary>Friends (click to expand)</summary>
+        <summary>Friends (click to expand, random order)</summary>
         <ul>
             <li>HKU: <a href=" http://yazhou-z.github.io">Yazhou Zhao</a></li>
             <li>SJTU: <a href=" http://yanjieze.com">Yanjie Ze</a></li>
