--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am an intern at
                             <a href=https://www.apple.com>Apple Inc.</a> now.
                         <br><br>
-                        Research Interest: Machine Learning, Computer Vision<br>
+                        Research Interest: Machine Learning<br>
                         <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> preminstrel
                         [at] gmail [dot] com<br>
                         <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> hanshi.sun [at]
