--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
                     <div id="toptitle">
                         <h1 style="color: black;">Hanshi Sun &nbsp 孙寒石</h1>
                     </div>
-                    <p>I am an undergraduate student in the Electrical and Computer Engineering Department at <a
-                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I am a
+                    <p>I am an incoming Master in Electrical and Computer Engineering at <a href=https://www.cmu.edu>Carnegie Mellon University</a>. I obtained my bachelor degree at <a
+                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I was a
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
                             href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I was
                         a research intern at the <a href=https://www.ualberta.ca/index.html target=_blank
                         rel=noopener>University of Alberta</a> before, supervised by Prof. <a
                             href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>. I am an intern at
-                            <a href=https://www.apple.com>Apple Inc.</a> now.
+                            <a href=https://www.apple.com>&#63743; Apple</a> now.
                         <br><br>
                         Research Interest: Machine Learning<br>
-                        <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> preminstrel
-                        [at] gmail [dot] com<br>
+                        <img src="assets/img/gmail.png" width="20px" style="margin-bottom:-3px"> hanshis [at] andrew [dot] cmu [dot] edu<br>
                         <img src="assets/img/Outlook.png" width="20px" style="margin-bottom:-3px"> hanshi.sun [at]
                         outlook [dot] com<br>
                     </p>
@@ -65,12 +64,11 @@
     <ul>
         <div style="height:60px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
-                <p>[2022/11/15] I am working at <a href=https://www.apple.com>Apple Inc.</a> as an intern in EE/SW team for ten months.
+                <p>[2023/02/17] I will pursue my M.S. in ECE at <a href=https://www.cmu.edu>Carnegie Mellon University</a> in Fall 2023.</p>
                 </p>
             </li>
             <li>
-                <p>[2022/10/12] I am working on my bachelor thesis, supervised by Prof. <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a> at Southeast
-                    University.
+                <p>[2022/11/15] I am working at <a href=https://www.apple.com>&#63743; Apple</a> as an intern in EE/SW team for ten months.
                 </p>
             </li>
             <li>
@@ -89,12 +87,27 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Sep 2019 - Jul 2023)</h4>
+                    <p><strong> Carnegie Mellon University, Pittsburgh, United States (Aug 2023 - Dec 2024)</strong></p>
+                    <p><i>M.S. in Electrical & Computer Engineering</i></p>
+                </td>
+                <td width="120px">
+                    <img src="assets/img/cmu_logo.jpeg" width="110px">
+                </td>
+                <td width="170px">
+                    <img src="assets/img/cmu_logo_2.png" width="165px">
+                </td>
+            </tr>
+            <tr></tr>
+        </tbody>
+    </table>
+    <table>
+        <tbody>
+            <tr>
+                <td width="800">
+                    <p><strong> Southeast University, Nanjing, China (Sep 2019 - Jul 2023)</strong></p>
+                    <i>B.E. in Eletronic Science and Technology</i>
                     <ul>
-                        <li>
-                            <i>Bachelor of Engineering in Eletronic Science and Technology</i>
-                        </li>
-                        <li>Overall GPA: <font style="color: rgb(154, 9, 9);"> 3.98/4.0, 94.04/100 </font> | Ranking: 1/20</li>
+                        <li>Overall GPA: <font style="color: #bb0000;"> 3.98/4.0, 94.04/100 </font></li>
                         <li>2021 & 2022 China National Scholarship</li>
                     </ul>
                 </td>
@@ -111,39 +124,9 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Oct 2021 - Jul 2023)</h4>
+                    <p><strong>University of Alberta, Edmonton, Canada (Jul 2022 - Oct 2022)</strong></p>
+                    <i>Mitacs Globalink Research Internship</i>
                     <ul>
-                        <li>
-                            <i>Research Assitant in <a href="http://palm.seu.edu.cn/members.html">PALM Lab</a></i>
-                        </li>
-                        <li>Supervisor: Prof.
-                            <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou
-                            </a>
-                        </li>
-                        <li>Project 1: Disentangled Distribution Learning and Consistency Regularization</li>
-                        <li>Project 2: Multi-Modal Multi-task Transformer on Disease Detection</li>
-                        <li>Project 3: Multi-task Learning For Multi-disease Classification</li>
-                    </ul>
-                </td>
-                <td width="141px">
-                    <img id="school_logo" src="assets/img/PALMLogo.png" width="120px">
-                </td>
-                <td width="144px">
-                    <img src="assets/img/seu.jpg" width="125px">
-                </td>
-            </tr>
-            <tr></tr>
-        </tbody>
-    </table>
-    <table>
-        <tbody>
-            <tr>
-                <td width="800">
-                    <h4> University of Alberta, Edmonton, Canada (Jul 2022 - Oct 2022)</h4>
-                    <ul>
-                        <li>
-                            <i>Mitacs Globalink Research Internship</i>
-                        </li>
                         <li>Supervisor: Prof. <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a>
                         </li>
                         <li>Project: Weak/self Supervised Learning for Anomaly Detection</li>
@@ -166,23 +149,21 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Southeast University, Nanjing, China (Dec 2020 - Sep 2021)</h4>
+                    <p><strong> Southeast University, Nanjing, China (Oct 2020 - Jul 2022)</strong></p>
+                    <i>Research Assitant in <a href="http://palm.seu.edu.cn/members.html">PALM Lab</a> and  <a href="https://electronic.seu.edu.cn/dz_en/11384/list.htm">
+                        National Engineering Research Center For ASIC
+                    </a></i>
                     <ul>
-                        <li>
-                            <i>Research Assitant in
-                                <a href="https://electronic.seu.edu.cn/dz_en/11384/list.htm">
-                                    National Engineering Research Center For ASIC
-                                </a></i>
-                        </li>
                         <li>Supervisor: Prof.
-                            <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu
-                            </a>
+                            <a href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>, Prof. <a href="https://electronic.seu.edu.cn/lh/list.htm">Hao Liu</a>
                         </li>
-                        <li>Project: Energy-efficient DNN Algorithm for ECG Classification</li>
+                        <li>Project 1: Energy-efficient DNN Algorithm for ECG Classification</li>
+                        <li>Project 2: Multi-Modal Multi-task Transformer on Disease Detection</li>
+                        <li>Project 2: Multi-task Learning For Multi-disease Classification</li>
                     </ul>
                 </td>
                 <td width="141px">
-                    <img src="assets/img/asic_l.png" width="120px">
+                    <img id="school_logo" src="assets/img/PALMLogo.png" width="120px">
                 </td>
                 <td width="144px">
                     <img src="assets/img/seu_ee.jpeg" width="125px">
@@ -196,11 +177,9 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <h4> Apple Inc., Shenzhen, China (Nov 2022 - Present)</h4>
+                    <p><strong>Apple Inc., Shenzhen, China (Nov 2022 - Present)</strong></p>
+                    <i>R&D Intern in iPad System EE</i>
                     <ul>
-                        <li>
-                            <i>iPad System Intern</i>
-                        </li>
                         <li>Built a python automation test frame that can run on multiple units, collect and analyze logs</li>
                         <li>Issue reproduction, symptom capture, and hands-on debugging for coexistence testing</li>
                         <li>Created web pages with diverse visualization of the analyzed data using Flask</li>
@@ -208,7 +187,7 @@
                     </li>
                 </td>
                 <td width="288px">
-                    <img src="assets/img/apple.png" width="288px">
+                    <img src="assets/img/apple.svg" width="288px">
                 </td>
             </tr>
             <tr></tr>
@@ -228,10 +207,7 @@
                 <i style="color:red">In submission</i>
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/" target="blank">project
-                        page</a>]
-                    <!-- [<a href="https://ieeexplore.ieee.org/document/9797527" target="_blank">paper</a>] -->
-                    <!-- [<a href="https://github.com/preminstrel/ECG-Classification" target="_blank">code</a>] -->
+                    [<a href="https://preminstrel.github.io/" target="blank">project page</a>]
                 </p>
             </td>
         </tr>
@@ -239,28 +215,6 @@
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
     </table>
-    <!-- <table>
-        <tr>
-            <td width="306">
-                <img src="assets/img/Ret-T.png" width="285px" style="box-shadow: 4px 4px 8px #888">
-            </td>
-            <td>
-                <b>Ret-T: Retinal Disease Recognition with Multi-modal Multi-task Transformer
-                </b> <br>
-                <br>
-                Peng Xie, Yixiao Yuan, <strong>Hanshi Sun</strong> and Yi Zhou <br>
-                <i style="color:red">In submission</i>
-                <p></p>
-                <p>
-                    [<a href="https://preminstrel.github.io/Disentangled-Distribution-Learning/" target="blank">project
-                        page</a>]
-                </p>
-            </td>
-        </tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-        <tr>&nbsp</tr>
-    </table> -->
     <table>
         <tr>
             <td width="315">
@@ -334,7 +288,7 @@
             </center>
         </p>
         <center>
-            <p style="color: darkgray;"> © Hanshi Sun 2022</p>
+            <p style="color: darkgray;"> © Hanshi Sun 2023</p>
         </center>
 
     </div>
