--- a/index.html
+++ b/index.html
@@ -193,8 +193,8 @@
             <tr></tr>
         </tbody>
     </table>
-    <h2>Selected Publications</h2>
-    <table>
+    <h2>Publications</h2>
+    <!-- <table>
         <tr>
             <td width="315">
                 <img src="assets/img/Retinal_OCT_AD.png" width="300px">
@@ -214,7 +214,7 @@
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
-    </table>
+    </table> -->
     <table>
         <tr>
             <td width="315">
