--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <tr>
                 <td width="800">
                     <p><strong> Southeast University, Nanjing, China (Sep 2019 - Jul 2023)</strong></p>
-                    <i>B.E. in Eletronic Science and Technology</i>
+                    <i>B.E. in Electronic Science and Technology</i>
                     <ul>
                         <li>Overall GPA: <font style="color: #bb0000;"> 3.98/4.0, 94.04/100 </font></li>
                         <li>2021 & 2022 China National Scholarship</li>
