--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@
         <ul>
             <li>HKU: <a href=" http://yazhou-z.github.io">Yazhou Zhao</a></li>
             <li>SJTU: <a href=" http://yanjieze.com">Yanjie Ze</a></li>
-            <li>UC: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
-            <li>SEU: <a href="https://eshoyuan.github.io">Yixiao Yuan</a>, <a href="https://huapengzhou.life">Huapeng Zhou</a></li>
+            <li>JHU: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
+            <li>Columbia University: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
+            <li>UW: <a href="https://huapengzhou.life">Huapeng Zhou</a></li>
             <li>SWU: <a href="https://ming-cong-tang.com/">Mingcong Tang</a></li>
             <li>PolyU: <a href="https://zhe-wang0018.github.io">Zhe Wang</a></li>
             <li>HHU: <a href="https://carelessty.github.io">Tingyu Chen</a></li>
