--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </p>
             </li>
             <li>
-                <p>[2022/11/15] I am working at <a href=https://www.apple.com>&#63743; Apple</a> as an intern in EE/SW team for ten months.
+                <p>[2022/11/15] I am working at <a href=https://www.apple.com>&#63743; Apple</a> as an intern in EE/SW team for eight months.
                 </p>
             </li>
             <li>
@@ -177,7 +177,7 @@
         <tbody>
             <tr>
                 <td width="800">
-                    <p><strong>Apple Inc., Shenzhen, China (Nov 2022 - Present)</strong></p>
+                    <p><strong>Apple Inc., Shenzhen, China (Nov 2022 - Jun 2023)</strong></p>
                     <i>R&D Intern in iPad System EE</i>
                     <ul>
                         <li>Built a python automation test frame that can run on multiple units, collect and analyze logs</li>
@@ -194,27 +194,27 @@
         </tbody>
     </table>
     <h2>Publications</h2>
-    <!-- <table>
+    <table>
         <tr>
             <td width="315">
-                <img src="assets/img/Retinal_OCT_AD.png" width="300px">
+                <img src="assets/img/BMAD.png" width="300px">
             </td>
             <td>
-                <b>Retinal OCT Anomaly Detection and Localization by Anatomic Structure-Enhanced Augmentation
+                <b>BMAD: Benchmarks for Medical Anomaly Detection
                 </b> <br>
                 <br>
-                <a href="https://github.com/DorisBao">Jinan Bao</a>, <strong>Hanshi Sun</strong> and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a> <br>
-                <i style="color:red">In submission</i>
+                Jinan Bao, <strong>Hanshi Sun</strong>, Hanqiu Deng, Yinsheng He, Zhaoxiang Zhang, and <a href="https://www.ece.ualberta.ca/~xingyu/index.html">Xingyu Li</a> <br>
+                arXiv:2306.11876, 2023
                 <p></p>
                 <p>
-                    [<a href="https://preminstrel.github.io/" target="blank">project page</a>]
+                    [<a href="https://arxiv.org/pdf/2306.11876.pdf" target="blank">paper</a>] [<a href="https://github.com/DorisBao/BMAD" target="blank">code</a>]
                 </p>
             </td>
         </tr>
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
         <tr>&nbsp</tr>
-    </table> -->
+    </table>
     <table>
         <tr>
             <td width="315">
@@ -272,7 +272,7 @@
             <li>JHU: <a href="https://horaceyi.github.io/">Hongrui Yi</a></li>
             <li>Columbia University: <a href="https://eshoyuan.github.io">Yixiao Yuan</a></li>
             <li>UW: <a href="https://huapengzhou.life">Huapeng Zhou</a></li>
-            <li>SWU: <a href="https://ming-cong-tang.com/">Mingcong Tang</a></li>
+            <li>BU: <a href="https://ming-cong-tang.com/">Mingcong Tang</a></li>
             <li>PolyU: <a href="https://zhe-wang0018.github.io">Zhe Wang</a></li>
             <li>HHU: <a href="https://carelessty.github.io">Tingyu Chen</a></li>
             <li>CUC: <a href="https://primopan.github.io">Primo Pan</a></li>
