--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
     <ul>
         <div style="height:60px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
+                <p>[2023/06/20] I graduated from <a
+                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a> with a bachelor degree.</p>
+            </li>
+            
+            <li>
                 <p>[2023/02/17] I will pursue my M.S. in ECE at <a href=https://www.cmu.edu>Carnegie Mellon University</a> in Fall 2023.</p>
                 </p>
             </li>
