--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Hanshi Sun</title>
+    <title>Hongrui Yi</title>
     <link rel="shortcut icon" href="assets/img/title.ico">
     <link rel="stylesheet" href="red.css" type="text/css">
 </head>
@@ -18,10 +18,11 @@
                 </td>
                 <td style="padding:0.5%;width:70%;vertical-align:middle">
                     <div id="toptitle">
-                        <h1 style="color: black;">Hanshi Sun &nbsp 孙寒石</h1>
+                        <h1 style="color: black;">Hongrui Yi &nbsp 易弘睿</h1>
                     </div>
-                    <p>I am an incoming Master in Electrical and Computer Engineering at <a href=https://www.cmu.edu>Carnegie Mellon University</a>. I obtained my bachelor degree at <a
-                            href="https://www.seu.edu.cn/english/" target="blank">Southeast University</a>. I was a
+                    <p>I am a master student in Electrical and Computer Engineering at <a href=https://www.jhu.edu/>Johns Hopkins University</a>. I obtained my bachelor degree at <a
+                            href="https://www.uc.edu/" target="blank">University of Cincinnati</a> and <a
+                            href="http://english.cqu.edu.cn//" target="blank">Chongqing University</a>. I was a
                         member of the <a href="http://palm.seu.edu.cn/members.html">PAttern Learning and Mining (PALM)
                             Lab</a> , where I am fortunate to be advised by Prof. <a
                             href="https://scholar.google.co.uk/citations?user=EnDCJKMAAAAJ&hl=en">Yi Zhou</a>. I was
